--- a/lesson-7/Змейка/lesson7/lesson7.html
+++ b/lesson-7/Змейка/lesson7/lesson7.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 <div class="wrap">
+    <h3 class="score"></h3>
     <div id="snake-field"></div>
     <div class="buttons">
         <div id="snake-start">Старт</div>
-        <div id="snake-renew">Новая игра</div>
+        <div id="snake-renew" style="margin-right: 0;">Новая игра</div>
     </div>
 </div>
 </body>
